@@ -29,12 +29,13 @@ import org.springframework.data.domain.PageRequest;
 import java.io.InputStream;
 import java.time.Instant;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static com.epam.indigoeln.core.service.print.itext2.model.experiment.PreferredCompoundsModel.Structure;
 import static com.epam.indigoeln.core.util.BatchComponentUtil.*;
+import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
+import static java.util.stream.Collectors.toList;
 
 /**
  * The class is responsible for mapping experiment to a list of pdf sections used by pdf generator.
@@ -49,6 +50,13 @@ public final class ExperimentPdfSectionsProvider implements PdfSectionsProvider 
     private final UserRepository userRepository;
 
     private static final HashMap<String, ComponentToPdfSectionsConverter> componentNameToConverter = new HashMap<>();
+
+    static {
+        put(REACTION, ExperimentPdfSectionsProvider::reactionConverter);
+        put(PREFERRED_COMPOUND_SUMMARY, ExperimentPdfSectionsProvider::preferredCompoundSummaryConverter);
+        put(STOICH_TABLE, ExperimentPdfSectionsProvider::stoichTableConverter);
+        put(EXPERIMENT_DESCRIPTION, ExperimentPdfSectionsProvider::experimentDescriptionConverter);
+    }
 
     public ExperimentPdfSectionsProvider(Project project, Notebook notebook, Experiment experiment, FileRepository fileRepository,
                                          PrintRequest printRequest, UserRepository userRepository) {
@@ -69,27 +77,33 @@ public final class ExperimentPdfSectionsProvider implements PdfSectionsProvider 
      * @return list of raw uninitialized pdf sections corresponding to experiment components.
      */
     public List<AbstractPdfSection> getContentSections() {
-        List<AbstractPdfSection> list = StreamEx.of(experiment.getComponents())
-                .filter(c -> printRequest.getComponents().contains(c.getName()))
-                .flatMap(this::sections)
-                .toList();
-        if (printRequest.getComponents().contains(ATTACHMENTS)) {
-            list.add(getAttachmentsSection());
+        List<String> components = printRequest.getComponents();
+
+        List<AbstractPdfSection> contentSections = components
+                .stream()
+                .flatMap(this::sectionOfComponent)
+                .collect(toList());
+        if (components.contains(ATTACHMENTS)) {
+            contentSections.add(getAttachmentsSection());
         }
-        return list;
+        return contentSections;
     }
 
-    private Stream<AbstractPdfSection> sections(Component component) {
-        return Optional.ofNullable(componentNameToConverter.get(component.getName()))
-                .map(converter -> converter.convert(Pair.of(component, experiment)).stream())
-                .orElseGet(Stream::empty);
+    private Stream<AbstractPdfSection> sectionOfComponent(String printedComponentName) {
+        Optional<Component> componentOfExperiment = getComponentOfExperiment(printedComponentName);
+        if (componentOfExperiment.isPresent()) {
+            return Optional.ofNullable(componentNameToConverter.get(printedComponentName))
+                    .map(converter -> converter.convert(Pair.of(componentOfExperiment.get(), experiment)).stream())
+                    .orElse(Stream.empty());
+        }
+        return Stream.empty();
     }
 
-    static {
-        put(REACTION, ExperimentPdfSectionsProvider::reactionConverter);
-        put(PREFERRED_COMPOUND_SUMMARY, ExperimentPdfSectionsProvider::preferredCompoundSummaryConverter);
-        put(STOICH_TABLE, ExperimentPdfSectionsProvider::stoichTableConverter);
-        put(EXPERIMENT_DESCRIPTION, ExperimentPdfSectionsProvider::experimentDescriptionConverter);
+    private Optional<Component> getComponentOfExperiment(String printedComponentName) {
+        return experiment.getComponents().stream()
+                .filter(component -> (PREFERRED_COMPOUND_SUMMARY.equals(printedComponentName) && PRODUCT_BATCH_SUMMARY.equals(component.getName()))
+                        || printedComponentName.equals(component.getName()))
+                .findAny();
     }
 
     private static void put(String name, ComponentToPdfSectionsConverter builder) {
@@ -106,7 +120,7 @@ public final class ExperimentPdfSectionsProvider implements PdfSectionsProvider 
                 .setProjectAlias(content.getString("projectAliasName"))
                 .setLinkedExperiment(content.streamObjects("linkedExperiments").map(m -> m.getString("text")).toList())
                 .setLiteratureReference(content.getString("literature"))
-                .setCoauthors(userRepository.findAll(content.streamStrings("coAuthors").toList()).stream().map(User::getFullName).collect(Collectors.toList()))
+                .setCoauthors(userRepository.findAll(content.streamStrings("coAuthors").toList()).stream().map(User::getFullName).collect(toList()))
         )));
     }
 
@@ -117,8 +131,8 @@ public final class ExperimentPdfSectionsProvider implements PdfSectionsProvider 
                 content.streamObjects("linkedExperiments").map(m -> m.getString("text")).toList(),
                 content.getString("codeAndName", "name"),
                 content.getString("keywords"),
-                userRepository.findAll(content.streamStrings("designers").toList()).stream().map(User::getFullName).collect(Collectors.toList()),
-                userRepository.findAll(content.streamStrings("coAuthors").toList()).stream().map(User::getFullName).collect(Collectors.toList())
+                userRepository.findAll(content.streamStrings("designers").toList()).stream().map(User::getFullName).collect(toList()),
+                userRepository.findAll(content.streamStrings("coAuthors").toList()).stream().map(User::getFullName).collect(toList())
         ))));
     }
 
@@ -129,18 +143,11 @@ public final class ExperimentPdfSectionsProvider implements PdfSectionsProvider 
     }
 
     private static List<AbstractPdfSection> preferredCompoundSummaryConverter(Pair<Component, Experiment> p) {
-        Optional<MongoExt> productBatchSummary = p.getRight().getComponents().stream()
-                .filter(component -> PRODUCT_BATCH_SUMMARY.equals(component.getName()))
-                .map(Component::getContent)
-                .map(MongoExt::of)
-                .findAny();
-
-        return productBatchSummary.map(content -> {
-            List<PreferredCompoundsRow> rows = content.streamObjects("batches")
-                    .map(ExperimentPdfSectionsProvider::getPreferredCompoundsRow)
-                    .toList();
-            return singletonList(((AbstractPdfSection)new PreferredCompoundsSection(new PreferredCompoundsModel(rows))));
-        }).orElse(Collections.emptyList());
+        return MongoExt.of(p.getLeft()).map(content ->
+                singletonList(new PreferredCompoundsSection(new PreferredCompoundsModel(
+                        content.streamObjects("batches")
+                                .map(ExperimentPdfSectionsProvider::getPreferredCompoundsRow)
+                                .toList()))));
     }
 
     private static PreferredCompoundsRow getPreferredCompoundsRow(MongoExt compound) {
@@ -203,7 +210,7 @@ public final class ExperimentPdfSectionsProvider implements PdfSectionsProvider 
         Optional<List<String>> batchOwner = p.getRight().getComponents().stream()
                 .filter(component -> REACTION_DETAILS.equals(component.getName()))
                 .map(MongoExt::of)
-                .map(m -> userRepository.findAll(m.streamStrings("batchOwner").toList()).stream().map(User::getFullName).collect(Collectors.toList()))
+                .map(m -> userRepository.findAll(m.streamStrings("batchOwner").toList()).stream().map(User::getFullName).collect(toList()))
                 .findAny();
 
         List<BatchInformationRow> batchInfoRows = MongoExt.of(p.getLeft())
@@ -247,7 +254,7 @@ public final class ExperimentPdfSectionsProvider implements PdfSectionsProvider 
                         batch.getString("exactMass"),
                         batch.getString("saltCode", "name"),
                         batch.getString("saltEq", "value"),
-                        batchOwner.orElse(Collections.emptyList()),
+                        batchOwner.orElse(emptyList()),
                         batch.getString("comments")
                 ));
     }
@@ -262,7 +269,7 @@ public final class ExperimentPdfSectionsProvider implements PdfSectionsProvider 
         Optional<List<String>> batchOwner = p.getRight().getComponents().stream()
                 .filter(component -> REACTION_DETAILS.equals(component.getName()))
                 .map(MongoExt::of)
-                .map(m -> userRepository.findAll(m.streamStrings("batchOwner").toList()).stream().map(User::getFullName).collect(Collectors.toList()))
+                .map(m -> userRepository.findAll(m.streamStrings("batchOwner").toList()).stream().map(User::getFullName).collect(toList()))
                 .findAny();
 
         Optional<List<AbstractPdfSection>> sections = content.map(m -> m.streamObjects("batches")
@@ -272,7 +279,7 @@ public final class ExperimentPdfSectionsProvider implements PdfSectionsProvider 
                         .setStructureComments(batch.getString("structureComments"))
                         .setSource(batch.getString("source", "name"))
                         .setSourceDetail(batch.getString("sourceDetail", "name"))
-                        .setBatchOwner(batchOwner.orElse(Collections.emptyList()))
+                        .setBatchOwner(batchOwner.orElse(emptyList()))
                         .setMolWeight(batch.getString("molWeight", "value"))
                         .setFormula(batch.getString("formula"))
                         .setResidualSolvent(batch.getString("residualSolvents", "asString"))
@@ -284,21 +291,21 @@ public final class ExperimentPdfSectionsProvider implements PdfSectionsProvider 
                         .setStorageInstructions(batch.getString("storageInstructions", "asString"))
                 ))
                 .toList());
-        return sections.orElse(Collections.emptyList());
+        return sections.orElse(emptyList());
     }
 
     private List<GridFSDBFile> getFiles(Set<String> fileIds) {
         if (!fileIds.isEmpty()) {
             return fileRepository.findAll(fileIds, new PageRequest(0, fileIds.size())).getContent();
         } else {
-            return Collections.emptyList();
+            return emptyList();
         }
     }
 
     private AttachmentsSection getAttachmentsSection() {
         List<FileDTO> list = files.stream()
                 .map(FileDTO::new)
-                .collect(Collectors.toList());
+                .collect(toList());
         return new AttachmentsSection(new AttachmentsModel(list));
     }
 
@@ -308,7 +315,7 @@ public final class ExperimentPdfSectionsProvider implements PdfSectionsProvider 
             return files.stream()
                     .filter(f -> "application/pdf".equals(f.getContentType()))
                     .map(GridFSDBFile::getInputStream)
-                    .collect(Collectors.toList());
+                    .collect(toList());
         } else {
             return PdfSectionsProvider.super.getExtraPdf();
         }
